# philosophers

./: CMakeLists.txt
philo_one/: Makefile  initialization.c  main_thread.c  phil_function.c  philo_one.c  philo_one.h  philo_thread.c  philosopher.h  set_arg.c  utils.c  utils2.c
philo_three/: Makefile  initialization.c  main_thread.c  phil_function.c  philo_thread.c  philo_three.c  philo_three.h  set_arg.c  utils.c  utils2.c
philo_two/: Makefile  initialization.c  main_thread.c  phil_function.c  philo_thread.c  philo_two  philo_two.c  philo_two.h  set_arg.c  utils.c  utils2.c
